--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -761,6 +761,7 @@ header #st-logo img {
     height: 880px;
     text-align: center;
     background: #0c161e;
+    color: white;
 }
 
 .about-text {
