--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -1152,6 +1152,7 @@ header #st-logo img {
     padding-right: 120px;
     padding-left: 120px;
     margin-bottom: 80px;
+    margin-top: -60px;
     text-align: center;
 }
 
