--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -509,6 +509,7 @@ header #st-logo img {
 .image-section h4 {
     line-height: 41px;
     font-size: 34px;
+    margin-top: -130px;
     color: #ffffff;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 300;
