les fonctionnalités + css

--- a/particle_dark/assets/css/custom/colors.css
+++ b/particle_dark/assets/css/custom/colors.css
@@ -13,6 +13,7 @@
 .service .icons i,
 .service-2 .icons i,
 .skills-headline h2 span,
+.our-work-section h2 span,
 .info-line .info-icon i,
 footer p a:hover,
 .portfolio-icons li a i,
