--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -703,7 +703,7 @@ header #st-logo img {
     width: 100%;
     background: rgba(0, 0, 0, 0.9);
     text-align: center;
-    padding-top: 35%;
+    padding-top: 80px;
     position: absolute;
     top: 6px;
     bottom: 6px;
