text file d'attente

--- a/particle_dark/assets/css/custom/colors.css
+++ b/particle_dark/assets/css/custom/colors.css
@@ -5,6 +5,7 @@
 .hero-section-2 .second-headline span,
 .hero-section-video-dark .second-headline span,
 .hero-section-yt-dark .second-headline span,
+.image-section h4 span,
 .about-icons li .icon .material-icons,
 .about-text h2 span,
 .quote-bottom .container h3 span,
