--- a/particle_dark/assets/css/custom/colors.css
+++ b/particle_dark/assets/css/custom/colors.css
@@ -10,6 +10,7 @@
 .about-text h2 span,
 .quote-bottom .container h3 span,
 .service-headline h2 span,
+.service-content p,
 .service .text a:hover,
 .service-2 .text a:hover,
 .service .icons i,
