--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -952,6 +952,8 @@ header #st-logo img {
 .service-content {
     text-align: center;
     overflow: hidden;
+    font-size: 16px;
+    margin-top: 16px;
 }
 
 .service-content .left,
