--- a/particle_dark/assets/css/custom/theme.css
+++ b/particle_dark/assets/css/custom/theme.css
@@ -3285,6 +3285,10 @@ footer p a {
     background: #0c161e;
 }
 
+body > section.portfolio-item > div.container-fluid > div > div > div > div.container {
+    width: 93%;
+}
+
 #quote > div > div > div.col-md-12.quote-headline {
     background: black;
 }
@@ -3299,6 +3303,10 @@ footer p a {
     opacity: 0.9;
 }
 
+body > section.portfolio-item > div.container-fluid > div > div > div > div.container > div > div > div {
+    line-height: 8em;
+}
+
 @media only screen and (max-width: 1200px) {
     #our-work {
         height: 45em;
@@ -3311,6 +3319,15 @@ footer p a {
     }
     #quote {
         background-color: #0c161e;
+    }
+    body > section.portfolio-item > div.container-fluid > div > div > div > div.container > div > div > div {
+        display: block;
+        text-align: center;
+    }
+    #project-info {
+        float: none !important;
+        margin:  auto;
+        display:  block;
     }
 }
 
@@ -3361,6 +3378,9 @@ footer p a {
     #about > div > div > div > div.about-text {
         height: 40em;
     }
+    body > section.portfolio-item > div.container-fluid > div > div > div > div.container > div > div > div {
+        line-height: 7em;
+    }
 }
 @media only screen and (max-width: 715px) {
     #services > div > div > div.col-md-12.service-content > div.right  {
@@ -3374,6 +3394,12 @@ footer p a {
 @media only screen and (max-width: 698px) {
     #services > div > div > div.col-md-12.service-content > div > div > div.text > h4 {
         text-align: left;
+    }
+}
+
+@media only screen and (max-width: 578px) {
+    body > section.portfolio-item > div.container-fluid > div > div > div > div.container > div > div > div {
+        line-height: 5em;
     }
 }
 
@@ -3436,6 +3462,9 @@ footer p a {
     #skills > div > div > div.col-md-12.progress-bar-wrapper {
         padding-left: 3px;
         padding-right: 3px;
+    }
+    body > section.portfolio-item > div.container-fluid > div > div > div > div.container > div > div > div {
+        line-height: 3em;
     }
 }
 
